--- a/SiwBooks/src/main/resources/static/css/style.css
+++ b/SiwBooks/src/main/resources/static/css/style.css
@@ -247,4 +247,13 @@ footer {
     background-color: #8f6d52;
 }
 
+.edit-button {
+    background-color: #ffc107;
+    color: black;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 
