--- a/SiwBooks/src/main/resources/templates/admin/adminHome.html
+++ b/SiwBooks/src/main/resources/templates/admin/adminHome.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Admin Homepage</title>
-    <link rel="stylesheet" href="/css/admin.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    
+    <link rel="stylesheet" href="/css/admin.css" />
+
 </head>
 
 <body>
@@ -14,11 +14,9 @@
             <span class="logo">SIWBooks Admin</span>
         </div>
         <div class="header-right">
-            <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" method="post" style="margin:0;">
-                    <button type="submit" class="logout-button">Logout</button>
-                </form>
-            </li>
+            <form th:action="@{/logout}" method="post" class="logout-form">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
         </div>
     </header>
 
