--- a/SiwBooks/src/main/resources/templates/admin/authorList.html
+++ b/SiwBooks/src/main/resources/templates/admin/authorList.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SiwBooks - Gestione Autori</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -16,11 +17,9 @@
         </div>
         <div class="header-right">
             <a href="/admin/home" class="admin-home-button">Home Admin</a>
-            <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" method="post" style="margin:0;">
-                    <button type="submit" class="logout-button">Logout</button>
-                </form>
-            </li>
+            <form th:action="@{/logout}" method="post" class="logout-form">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
         </div>
     </header>
 
@@ -49,7 +48,7 @@
                         <button type="submit" class="delete-button">Elimina</button>
                     </form>
 
-                    <form th:action="@{'/admin/autori/edit/' + ${autore.id}}" method="get" style="margin-top: 5px;">
+                    <form th:action="@{'/admin/autori/edit/' + ${autore.id}}" method="get" class="edit-author-form">
                         <button type="submit" class="edit-button">Modifica</button>
                     </form>
                 </div>
