--- a/SiwBooks/src/main/resources/templates/admin/editAuthor.html
+++ b/SiwBooks/src/main/resources/templates/admin/editAuthor.html
@@ -15,7 +15,7 @@
         <div class="header-right">
             <a href="/admin/home" class="admin-home-button">Home Admin</a>
             <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" method="post" style="margin:0;">
+                <form th:action="@{/logout}" method="post" class="logout-form">
                     <button type="submit" class="logout-button">Logout</button>
                 </form>
             </li>
