--- a/SiwBooks/src/main/resources/templates/admin/newBook.html
+++ b/SiwBooks/src/main/resources/templates/admin/newBook.html
@@ -4,6 +4,7 @@
 <head>
     <title>Nuovo Libro</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
     <link rel="stylesheet" href="/css/form.css" />
 </head>
 
@@ -14,11 +15,9 @@
         </div>
         <div class="header-right">
             <a href="/admin/home" class="admin-home-button">Home Admin</a>
-            <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" method="post" style="margin:0;">
-                    <button type="submit" class="logout-button">Logout</button>
-                </form>
-            </li>
+            <form th:action="@{/logout}" method="post" class="logout-form">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
         </div>
     </header>
 
