--- a/SiwBooks/src/main/resources/templates/bookDetails.html
+++ b/SiwBooks/src/main/resources/templates/bookDetails.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-        <div class="logo">📚 SiwBooks</div>
+        <div class="logo"><a href="/">📚 SiwBooks</a></div>
         <nav>
             <ul>
-                <li><a href="/">Catalogo</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/authors">Autori</a></li>
                 <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
                 <li sec:authorize="isAuthenticated()">
