--- a/SiwBooks/src/main/resources/templates/admin/editBook.html
+++ b/SiwBooks/src/main/resources/templates/admin/editBook.html
@@ -3,8 +3,10 @@
 
 <head>
     <title>Modifica Libro</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/form.css" />
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -14,11 +16,9 @@
         </div>
         <div class="header-right">
             <a href="/admin/home" class="admin-home-button">Home Admin</a>
-            <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" method="post" class="logout-form">
-                    <button type="submit" class="logout-button">Logout</button>
-                </form>
-            </li>
+            <form th:action="@{/logout}" method="post" class="logout-form">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
         </div>
     </header>
 
