--- a/SiwBooks/src/main/resources/templates/bookDetails.html
+++ b/SiwBooks/src/main/resources/templates/bookDetails.html
@@ -36,8 +36,10 @@
                         <div class="authors">
                             <h3>Autori</h3>
                             <ul>
-                                <li th:each="autore : ${book.authors}" th:text="${autore.name + ' ' + autore.surname}">
-                                    Autore</li>
+                                <li th:each="autore : ${book.authors}">
+                                    <a th:href="@{'/authors/' + ${autore.id}}" class="author-link"
+                                        th:text="${autore.name + ' ' + autore.surname}"></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -83,8 +85,20 @@
                     <label for="text">Testo</label>
                     <textarea id="text" th:field="*{text}" rows="4" required></textarea>
 
-                    <label for="rating">Valutazione</label>
-                    <input type="number" id="rating" th:field="*{rating}" min="1" max="5" required />
+                    <label for="rating" class="rating-label">Valutazione</label>
+                    <div class="star-rating">
+                        <input type="radio" id="star5" name="rating" th:field="*{rating}" value="5" /><label
+                            for="star5">★</label>
+                        <input type="radio" id="star4" name="rating" th:field="*{rating}" value="4" /><label
+                            for="star4">★</label>
+                        <input type="radio" id="star3" name="rating" th:field="*{rating}" value="3" /><label
+                            for="star3">★</label>
+                        <input type="radio" id="star2" name="rating" th:field="*{rating}" value="2" /><label
+                            for="star2">★</label>
+                        <input type="radio" id="star1" name="rating" th:field="*{rating}" value="1" /><label
+                            for="star1">★</label>
+                    </div>
+
 
                     <button type="submit">Invia recensione</button>
                 </form>
