--- a/SiwBooks/src/main/resources/templates/home.html
+++ b/SiwBooks/src/main/resources/templates/home.html
@@ -31,9 +31,13 @@
         <div class="search-bar-container hero-search" style="position:relative;">
             <input type="text" id="book-search-input" placeholder="Cerca un libro..." autocomplete="off" />
             <div id="search-results" class="search-results"></div>
+            <div id="motivational-message" class="motivational-message"></div>
         </div>
     </section>
-
+    <section class="shelf recommended">
+        <h2>Consigliati per te</h2>
+        <div class="books" id="recommended-books"></div>
+    </section>
     <main>
         <section class="shelf">
             <h2>Libri disponibili</h2>
