--- a/SiwBooks/src/main/resources/templates/register.html
+++ b/SiwBooks/src/main/resources/templates/register.html
@@ -29,6 +29,9 @@
         <h2>Registrati su SiwBooks</h2>
 
         <form th:action="@{/register}" th:object="${user}" method="post">
+            <div th:if="${UserExists}" class="error-message">
+                <p th:text="${UserExists}"></p>
+            </div>
             <div>
                 <label for="username">Username</label>
                 <input type="text" th:field="*{username}" id="username" required />
